# repro-template

./: MODULE.bazel  README.md  WORKSPACE  requirements.in
apps/: BUILD.bazel
libs2/: BUILD.bazel
tools/: install_prereqs.sh
